--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "db:studio": "npx drizzle-kit studio"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@hookform/resolvers": "^4.1.2",
     "@neondatabase/serverless": "^0.10.4",
     "@radix-ui/react-label": "^2.1.2",
